--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Truth in Financing, Indigenous Owned & Certified</title>
-  <meta name="description" content="100% Indigenous-owned, CCAB-certified financing support. Trauma-informed, OCAP-trained staff. Transparent auto financing that protects your tax exemption.">
-  <meta property="og:title" content="Turtle Island Financing — Transparent Indigenous Auto Financing">
-  <meta property="og:description" content="Indigenous-owned and certified. Your exemption savings stay yours. We support informed decisions with Free, Prior, and Informed Consent (FPIC).">
+  <title>Turtle Island Financing — Transparent Indigenous Auto Financing</title>
+  <meta name="description" content="100% Indigenous-owned, CCAB-certified. We protect your tax exemption and support informed decisions with FPIC. Trauma-informed, OCAP®-trained staff.">
+  <meta property="og:title" content="Turtle Island Financing — Truth in Financing">
+  <meta property="og:description" content="Keep your tax savings. Choose with confidence. No gimmicks, no pressure — just transparent Indigenous auto financing.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/hero-joyful-truck.png">
+  <link rel="icon" href="assets/logo-icon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="assets/favicon.png">
 </head>
 <body>
+  <!-- Header -->
   <header class="site-header">
     <div class="container nav">
-      <div class="brand">
-        <div class="logo">🐢</div>
+      <a class="brand" href="/">
+        <img class="logo" src="assets/logo-full.svg" alt="Turtle Island Financing logo" height="40">
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">100% Indigenous-Owned • CCAB Certified</p>
+          <p class="tag">100% Indigenous‑Owned • CCAB Certified</p>
         </div>
-      </div>
+      </a>
       <nav class="top-nav">
         <a class="btn link" href="/supports.html">Supports</a>
         <a class="btn link" href="/verify.html">Verify</a>
@@ -39,16 +40,21 @@
     <div class="container hero-grid">
       <div class="hero-copy">
         <h2>Keep Your Tax Savings. Choose With Confidence.</h2>
-        <p>We protect your Indigenous tax exemption and show every line of your deal transparently. No gimmicks, no pressure, just honest financing with Free, Prior, and Informed Consent (FPIC).</p>
+        <p class="slogan">At Turtle, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</p>
+        <p>We protect your Indigenous tax exemption and show every line of your deal transparently. Honest financing with Free, Prior, and Informed Consent (FPIC).</p>
         <div class="hero-ctas">
-          <a class="btn" href="#apply">Get Pre-Approved</a>
+          <a class="btn" href="#apply">Get Pre‑Approved</a>
           <a class="btn link" href="#truth">See How It Works</a>
         </div>
+        <ul class="pill-list">
+          <li>CCAB Certified</li>
+          <li>Trauma‑informed & OCAP®‑trained</li>
+          <li>Approved dealer network (TRC & FPIC)</li>
+          <li>Respectful tax‑exemption handling</li>
+        </ul>
       </div>
       <div class="hero-art">
-        <img src="assets/hero-joyful-truck.png"
-             alt="Happy customer celebrating a new truck purchase — Turtle Island Financing"
-             loading="eager" fetchpriority="high" decoding="async" />
+        <img src="assets/hero-joyful-truck.png" alt="Happy customer with new truck" loading="eager" fetchpriority="high" decoding="async">
       </div>
     </div>
   </section>
@@ -57,6 +63,7 @@
   <section id="truth" class="truth-in-financing">
     <div class="container">
       <h3>Truth in Financing: Shady vs. Transparent</h3>
+      <p class="muted">How some dealers inflate your loan vs. how Turtle Island protects your savings.</p>
       <table class="comparison">
         <thead>
           <tr><th>Line Item</th><th>Shady Dealer</th><th>Turtle Island</th></tr>
@@ -65,7 +72,7 @@
           <tr><td>Vehicle Price</td><td>$25,000</td><td>$25,000</td></tr>
           <tr><td>Fees (doc + finance)</td><td>$1,090</td><td>$1,090</td></tr>
           <tr><td>Taxes (GST+PST)</td><td>$3,129.80</td><td>$0 (Exempt)</td></tr>
-          <tr><td>Add-Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
+          <tr><td>Add‑Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
           <tr><td><strong>Amount Financed</strong></td><td><strong>$34,000</strong></td><td><strong>$26,090</strong></td></tr>
           <tr><td>Monthly Payment (60mo @10%)</td><td>$722</td><td>$554</td></tr>
           <tr><td><strong>Total of Payments</strong></td><td><strong>$43,320</strong></td><td><strong>$33,240</strong></td></tr>
@@ -78,38 +85,41 @@
     </div>
   </section>
 
-  <!-- Trust Section -->
+  <!-- Trust -->
   <section class="why-choose">
     <div class="container">
       <h3>Why Trust Turtle Island?</h3>
       <ul class="checklist">
-        <li>✅ 100% Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
-        <li>✅ Trauma-informed & <strong>OCAP® trained staff</strong> safeguard your data</li>
-        <li>✅ Over 20 years serving Indigenous communities with respect & dignity</li>
-        <li>✅ We only work with <strong>approved partner dealers</strong> trained by us in Indigenous history, Truth & Reconciliation, and our Transparent + FPIC model</li>
+        <li>✅ 100% Indigenous‑owned and proudly <strong>CCAB Certified</strong></li>
+        <li>✅ Trauma‑informed & <strong>OCAP®‑trained</strong> staff safeguard your data</li>
+        <li>✅ 20+ years serving Indigenous communities with dignity</li>
+        <li>✅ Only approved partner dealers trained by us in Indigenous history, Truth & Reconciliation, and our Transparent + FPIC model</li>
       </ul>
     </div>
   </section>
 
-  <!-- Application Form -->
+  <!-- Apply -->
   <section id="apply" class="form-wrap">
     <div class="container grid">
       <div class="form-card">
-        <h3>Quick Pre-Approval</h3>
-        <p class="muted"><strong>OCAP® Protected:</strong> Your personal information is handled under the principles of Ownership, Control, Access, and Possession — meaning your data remains yours and is only shared with approved partner dealers for financing.</p>
+        <h3>Quick Pre‑Approval</h3>
+        <p class="muted"><strong>OCAP® Protected:</strong> Your information is handled under Ownership, Control, Access, and Possession — your data remains yours and is only shared with approved partner dealers for financing.</p>
 
         <form name="preapproval" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" id="leadForm">
           <input type="hidden" name="form-name" value="preapproval">
           <p style="position:absolute;left:-9999px;"><label>Don’t fill this out: <input name="bot-field"></label></p>
+          <input type="hidden" name="utm_source"><input type="hidden" name="utm_medium">
+          <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
+          <input type="hidden" name="utm_content">
 
-          <!-- Personal Info -->
+          <!-- Personal -->
           <div class="row">
             <label>Full Name*<input type="text" name="name" required></label>
             <label>Date of Birth*<input type="date" name="dob" required></label>
           </div>
           <div class="row">
             <label>Email*<input type="email" name="email" required></label>
-            <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604-555-0123"></label>
+            <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604‑555‑0123"></label>
           </div>
 
           <!-- Address -->
@@ -134,11 +144,11 @@
           </div>
           <div class="row">
             <label>Employment Type<select name="employment">
-              <option>Full-Time</option><option>Part-Time</option><option>Seasonal</option>
-              <option>Self-Employed</option><option>Other</option>
+              <option>Full‑Time</option><option>Part‑Time</option><option>Seasonal</option>
+              <option>Self‑Employed</option><option>Other</option>
             </select></label>
             <label>Housing<select name="housing">
-              <option>Own</option><option>Rent</option><option>On-Reserve</option><option>With Family</option>
+              <option>Own</option><option>Rent</option><option>On‑Reserve</option><option>With Family</option>
             </select></label>
           </div>
 
@@ -155,7 +165,7 @@
           </div>
 
           <!-- Notes -->
-          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="E.g., seasonal fishing, on-reserve delivery, budget, timeline…"></textarea></label>
+          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="E.g., seasonal fishing, on‑reserve delivery, budget, timeline…"></textarea></label>
 
           <!-- Consent -->
           <label class="consent">
@@ -163,20 +173,20 @@
             I consent to my application being shared with Turtle Island approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
           </label>
 
-          <button type="submit" class="btn wide">Get Pre-Approved</button>
+          <button type="submit" class="btn wide">Get Pre‑Approved</button>
         </form>
       </div>
 
       <aside class="trust">
         <h4>Trust &amp; Certification</h4>
         <div class="ccab-badge">
-          <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business">
+          <img src="assets/logo-compact.svg" alt="Turtle Island icon" height="52">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
           <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
-          <li>100% Indigenous-owned and operated</li>
-          <li>OCAP®-aligned, trauma-informed trained staff</li>
+          <li>100% Indigenous‑owned and operated</li>
+          <li>OCAP®‑aligned, trauma‑informed trained staff</li>
         </ul>
         <div class="disclaimer">
           <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p>
@@ -188,7 +198,9 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container foot">
-      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong> • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
+      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
+      <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
+      <em>At Turtle, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</em></p>
       <nav>
         <a href="#apply">Apply</a>
         <a href="/supports.html">Supports</a>
@@ -200,7 +212,6 @@
     </div>
   </footer>
 
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="script.js"></script>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <script>
