--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container hero-grid">
       <div class="hero-copy">
         <h2>Keep Your Tax Savings. Choose With Confidence.</h2>
-        <p class="slogan">At Turtle, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</p>
+        <p class="slogan">At <strong>Turtle Island Financing</strong>, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</p>
         <p>We protect your Indigenous tax exemption and show every line of your deal transparently. Honest financing with Free, Prior, and Informed Consent (FPIC).</p>
         <div class="hero-ctas">
           <a class="btn" href="#apply">Get Pre‑Approved</a>
@@ -53,20 +53,21 @@
           <li>Respectful tax‑exemption handling</li>
         </ul>
       </div>
-      <div class="hero-art">
-        <img src="assets/hero-joyful-truck.png" alt="Happy customer with new truck" loading="eager" fetchpriority="high" decoding="async">
-      </div>
+      <figure class="hero-art">
+        <img src="assets/hero-joyful-truck.png" alt="Happy family with their new vehicle — Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
+        <figcaption class="hero-caption">the only thing fake about Turtle Island Financing is this AI Picture</figcaption>
+      </figure>
     </div>
   </section>
 
   <!-- Truth in Financing -->
   <section id="truth" class="truth-in-financing">
     <div class="container">
-      <h3>Truth in Financing: Shady vs. Transparent</h3>
-      <p class="muted">How some dealers inflate your loan vs. how Turtle Island protects your savings.</p>
+      <h3>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h3>
+      <p class="muted">How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
       <table class="comparison">
         <thead>
-          <tr><th>Line Item</th><th>Shady Dealer</th><th>Turtle Island</th></tr>
+          <tr><th>Line Item</th><th>Unaffiliated Dealer</th><th>Turtle Island Financing</th></tr>
         </thead>
         <tbody>
           <tr><td>Vehicle Price</td><td>$25,000</td><td>$25,000</td></tr>
@@ -88,7 +89,7 @@
   <!-- Trust -->
   <section class="why-choose">
     <div class="container">
-      <h3>Why Trust Turtle Island?</h3>
+      <h3>Why Trust Turtle Island Financing?</h3>
       <ul class="checklist">
         <li>✅ 100% Indigenous‑owned and proudly <strong>CCAB Certified</strong></li>
         <li>✅ Trauma‑informed & <strong>OCAP®‑trained</strong> staff safeguard your data</li>
@@ -170,7 +171,7 @@
           <!-- Consent -->
           <label class="consent">
             <input type="checkbox" name="consent" required>
-            I consent to my application being shared with Turtle Island approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
+            I consent to my application being shared with Turtle Island Financing approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
           </label>
 
           <button type="submit" class="btn wide">Get Pre‑Approved</button>
@@ -180,7 +181,7 @@
       <aside class="trust">
         <h4>Trust &amp; Certification</h4>
         <div class="ccab-badge">
-          <img src="assets/logo-compact.svg" alt="Turtle Island icon" height="52">
+          <img src="assets/logo-compact.svg" alt="Turtle Island Financing icon" height="52">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
@@ -200,7 +201,7 @@
     <div class="container foot">
       <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
       <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
-      <em>At Turtle, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</em></p>
+      <em>At Turtle Island Financing, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</em></p>
       <nav>
         <a href="#apply">Apply</a>
         <a href="/supports.html">Supports</a>
