--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <figure class="hero-art">
         <img src="assets/hero-joyful-truck.png" alt="Happy family with their new vehicle — Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
-        <figcaption class="hero-caption">the only thing fake about Turtle Island Financing is this AI Picture</figcaption>
+        <figcaption class="hero-caption">The only thing fake about Turtle Island Financing is this AI Picture</figcaption>
       </figure>
     </div>
   </section>
